# ipa-engine

./: LICENSE  README.md  demo.py  pyproject.toml
ipa_engine/: __init__.py
ipa_engine/ipa_resources/: fa.json
