[tool.poetry]
name = "ipa-engine"
version = "0.1.1"
description = ""
authors = ["Sheng Fan <fredtools999@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
include = ["ipa_engine"]

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
